--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +8,54 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+nav {
+  /* height: 70px; */
+  padding: 2% 3%;
+  display: flex;
+  box-shadow: 0px 0px 29px 0px rgba(170, 170, 170, 0.75);
+}
+
+.airbnb--logo {
+  width: 13%;
+} 
+
+section {
+  padding: 5%;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+}
+
+.photo--grid {
+  max-width: 1000px;
+  align-self: center;
+}
+
+.hero--header {
+  font-size: 4rem;
+  margin-bottom: 15px;
+}
+
+.hero--paragraph {
+  margin-top: 0;
+}
+
+.card--image {
+  border-radius: 10px;
+}
+.rating--icon {
+  max-width: 15px;
+  padding-right: 2px;
+}
+
+.card > p {
+  margin: 6px 0;
+}
+
+.gray {
+  color: #918E9B;
 }
