--- a/src/index.css
+++ b/src/index.css
@@ -64,9 +64,23 @@ section.card {
   color: #918E9B;
 }
 
+.card {
+  position: relative;
+}
+
 .cards-list {
   display: flex;
   flex-wrap: nowrap;
   gap: 20px;
   overflow-x: auto;
+}
+
+.card--badge {
+  position: absolute;
+  top: 6px;
+  left: 17%;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: light;
 }
